# ime_machinelearning

./: CMakeCache.txt  CMakeLists.txt  LICENSE  TODO.md  compile_commands.json
challenges/: CMakeLists.txt
challenges/labirinth/: CMakeLists.txt  DESCRIPTION.md  ga.cpp
challenges/money_saver/: CMakeLists.txt  README.md  agent.h  agentTemplate.cpp  game.cpp  game.h  gfx.cpp  main.cpp  person.h  personTest.cpp  terrain.map
challenges/money_saver/agents/: CMakeLists.txt  fnnSaver.cpp  fnnSaver.h  fnnSaverTrainer.cpp  fnnSaverTrainerGfx.cpp  template.cpp
client/: CMakeLists.txt  body.cpp  body.h  client.h  defines.h  draw.cpp  draw.h  gfx.cpp  gfx.h  world.cpp  world.h
client/gui/: imgui.cpp
client/physics/: body.cpp  world.cpp  world.h
cmake/: Macros.cmake
doc/: CMakeLists.txt  doxyfile.in  footer.html  header.html.in  mainpage.hpp
examples/: CMakeLists.txt  client.cpp  ga_binary.cpp  ga_value_float.cpp  ga_value_int.cpp  genalg.cpp  genomes.cpp  gfx.cpp  gui.cpp  neuralnet.cpp
geneticalgorithm/: CMakeLists.txt  binarygenome.cpp  binarygenome.h  genalg.cpp  genalg.h  geneticalgorithm.h  genetics.h  genome.h  valuegenome.h
gfx/: CMakeLists.txt  gfx.cpp  gfx.h
neuralnet/: CMakeLists.txt  fnn.cpp  fnn.h  neuralnet.cpp  neuralnet.h
neuralnetwork/: CMakeLists.txt  fnn.cpp  fnn.h  neuron.h
utils/: CMakeLists.txt  clip.h  rng.cpp  rng.h
