add_executable(neuralnet_example neuralnet.cpp)
target_link_libraries(neuralnet_example neuralnet)
set_target_properties(neuralnet_example PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/examples)

add_executable(genomes_example genalg.cpp)
target_link_libraries(genomes_example genalg)
set_target_properties(genomes_example PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/examples)

add_executable(ga_binary_example ga_binary.cpp)
target_link_libraries(ga_binary_example genalg)
set_target_properties(ga_binary_example PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/examples)
